<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnimeShare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer closed</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="loading">Loading</string>

    <string name="drawer_menu_one">main</string>
    <string name="drawer_menu_two">share</string>
    <string name="drawer_menu_three">msuic</string>
    <string name="drawer_menu_four">conventions</string>
    <string name="drawer_menu_five">feedback</string>
    <string name="drawer_menu_six">support</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="search_hint">Cowboy Bebop</string>
    <string name="search_label">Search</string>

    <string name="anime_total_episodes_string">Total Episodes %s</string>
    <string name="search_back">back</string>
    <string name="sort_by_popular">Popularity</string>
    <string name="sort_by_name">A-Z</string>
    <string name="sort_by_genre">Genre</string>
    <string name="no_search_results">No results found so far, search for something.</string>

</resources>
